--- a/TheTravellerBulgaria/pom.xml
+++ b/TheTravellerBulgaria/pom.xml
@@ -50,6 +50,10 @@
 			<artifactId>not-yet-commons-ssl</artifactId>
 			<version>0.3.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
