--- a/TheTravellerBulgaria/pom.xml
+++ b/TheTravellerBulgaria/pom.xml
@@ -54,6 +54,51 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		
+		
+		
+		
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-core</artifactId>
+		    <version>1.13</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-parsers</artifactId>
+		    <version>1.13</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-app</artifactId>
+		    <version>1.13</version>
+		</dependency>
+
+
+
+
+
+		
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-serialization</artifactId>
+		    <version>1.13</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-bundle</artifactId>
+		    <version>1.13</version>
+		</dependency>
+		
+		
+		
+		
+		
+		
+		
 	</dependencies>
 
 	<build>
